--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,178 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tab"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:orientation="vertical">
+        android:layout_height="wrap_content" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="15sp"
-            android:text="@string/profile_photo"/>
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/viewpager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/tab" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginVertical="15dp">
-
-            <ImageView
-                android:id="@+id/profile_picture"
-                android:layout_width="180dp"
-                android:layout_height="180dp"
-                android:contentDescription="@string/profile_photo"
-                android:src="@drawable/profile_photo" />
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="65dp"
-                android:layout_marginStart="50dp"
-                android:onClick="onChangePhotoClicked"
-                android:text="@string/change"
-                android:textSize="15sp"/>
-        </LinearLayout>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="15sp"
-            android:text="@string/name"/>
-
-        <EditText
-            android:id="@+id/profile_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/your_name"
-            android:inputType="textPersonName"
-            android:autofillHints="name"/>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="15sp"
-            android:text="@string/email"/>
-
-        <EditText
-            android:id="@+id/profile_email_address"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/your_email"
-            android:inputType="textEmailAddress"
-            android:autofillHints="emailAddress"/>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="15sp"
-            android:text="@string/phone"/>
-
-        <EditText
-            android:id="@+id/profile_phone_number"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/your_phone_number"
-            android:inputType="phone"
-            android:autofillHints="phone"/>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="15sp"
-            android:text="@string/gender"/>
-
-        <RadioGroup
-            android:id="@+id/profile_gender"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <RadioButton
-                android:id="@+id/profile_female_option"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textSize="15sp"
-                android:text="@string/female"/>
-
-            <RadioButton
-                android:id="@+id/profile_male_option"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textSize="15sp"
-                android:text="@string/male" />
-        </RadioGroup>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="15sp"
-            android:text="@string/class_label"/>
-
-        <EditText
-            android:id="@+id/profile_class_year"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/eg_2012"
-            android:inputType="date"
-            android:importantForAutofill="no"/>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="15sp"
-            android:text="@string/major"/>
-
-        <EditText
-            android:id="@+id/profile_major"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/your_major"
-            android:inputType="text"
-            android:importantForAutofill="no"/>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center">
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/save"
-                android:onClick="onSaveClicked"
-                android:layout_marginEnd="20dp"
-                android:minWidth="125dp"
-                android:textAllCaps="true"
-                android:textSize="15sp"
-                style="?android:attr/buttonBarStyle"/>
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/cancel"
-                android:onClick="onCancelClicked"
-                android:minWidth="125dp"
-                android:textAllCaps="true"
-                android:textSize="15sp"
-                style="?android:attr/buttonBarStyle"/>
-
-<!--            <Button-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:text="@string/reset"-->
-<!--                android:onClick="onResetClicked"-->
-<!--                android:layout_weight="0.33"-->
-<!--                android:textAllCaps="true"-->
-<!--                android:textSize="15sp"-->
-<!--                style="?android:attr/buttonBarStyle"/>-->
-        </LinearLayout>
-    </LinearLayout>
-</ScrollView>
+</RelativeLayout>
